# madr

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
madr/: app.py  database.py  models.py  schemas.py  security.py  settings.py
madr/routers/: auth.py  conta.py  contas.py  livro.py  romancista.py
migrations/: env.py
migrations/versions/: 3851a5483cbb_create_contas_table.py  48e4bfdf94a2_alterada_foreign_key_para_romancista_ao_.py  740aa4e67dee_gerando_livros_e_romancistas.py  9d8e299ec469_foreign_key_livro_romancista.py  b33db1d39a32_criado_relacionamento_entre_tabelas.py  c1dd63d7c47b_selectin_lazy_em_livro_romancista.py
tests/: conftest.py  helpers.py  test_app.py  test_auth.py  test_conta.py  test_contas.py  test_db.py  test_livro.py  test_romancista.py  test_security.py
